Adiciona funcionalidade de Editar Permissões

--- a/app-marketplace/marketplace-frontend-fix/src/app/components/page-profiles/page-profiles.component.html
+++ b/app-marketplace/marketplace-frontend-fix/src/app/components/page-profiles/page-profiles.component.html
@@ -6,9 +6,9 @@
             Perfis
         </div>
         <div class="col p-0 text-end">
-            <button type="button" class="btn btn-outline-primary" (click)="Modal_Register()">
+            <!-- <button type="button" class="btn btn-outline-primary" (click)="Modal_Register()">
                 Adicionar <i class="bi bi-plus-lg"></i>
-            </button>
+            </button> -->
         </div>
     </div>
 
