--- a/app-marketplace/marketplace-frontend-fix/src/app/components/common/pagination/pagination.component.html
+++ b/app-marketplace/marketplace-frontend-fix/src/app/components/common/pagination/pagination.component.html
@@ -1,3 +1,12 @@
+<style>
+    .btn-pgn{
+        width: 40px;
+        height: 40px;
+        font-size: 12px;
+        font-weight: bolder;
+    }
+</style>
+
 <div class="row align-items-end bg-white-d p-2">
 
     <div class="col-3 my-auto">
@@ -11,27 +20,32 @@
     </div> 
 
     <div class="col-6 text-center" *ngIf="itemsPerPage!=0">
-        <div class="btn-group">
-            <button class="btn btn-outline-secondary me-1" (click)="Button_First()" type="button">
-                <i class="bi bi-chevron-bar-left"></i>
-            </button>
-            <button class="btn btn-outline-secondary me-1" (click)="Button_Previous()" type="button">
-                <i class="bi bi-chevron-left"></i>
-            </button>
+        <div>
+            <ng-container *ngIf="page > 1">
+                <button class="btn btn-outline-secondary me-1 btn-pgn" (click)="Button_First()" type="button">
+                    <i class="bi bi-chevron-bar-left"></i>
+                </button>
+                <button class="btn btn-outline-secondary me-1 btn-pgn" (click)="Button_Previous()" type="button">
+                    <i class="bi bi-chevron-left"></i>
+                </button>
+            </ng-container>
+            
 
             <button *ngFor="let pageItem of pageList" 
-                class="btn btn-outline-primary" 
+                class="btn btn-outline-primary me-1 btn-pgn" 
                 [ngClass]="{'active': pageItem == this.page}" 
                 (click)="Button_Page(pageItem)">
                     {{pageItem}}
             </button>
             
-            <button class="btn btn-outline-secondary ms-1" (click)="Button_Next()" type="button">
-                <i class="bi bi-chevron-right"></i>
-            </button>
-            <button class="btn btn-outline-secondary ms-1" (click)="Button_Last()">
-                <i class="bi bi-chevron-bar-right"></i>
-            </button>
+            <ng-container *ngIf="page != totalPages">
+                <button class="btn btn-outline-secondary me-1 btn-pgn" (click)="Button_Next()" type="button">
+                    <i class="bi bi-chevron-right"></i>
+                </button>
+                <button class="btn btn-outline-secondary me-1 btn-pgn" (click)="Button_Last()">
+                    <i class="bi bi-chevron-bar-right"></i>
+                </button>
+            </ng-container>
         </div>  
     </div>
 
