--- a/app-marketplace/marketplace-frontend-fix/src/app/app.component.html
+++ b/app-marketplace/marketplace-frontend-fix/src/app/app.component.html
@@ -35,28 +35,27 @@
 </head>
 
 <!-- Toolbar -->
-<div class="toolbar bg-primary justify-content-center" role="banner">
-  <div class="row m-0" style="max-width: 100vw;">
-    <div class="col-4">
-      <div class="row" style="margin-left: 10px;">
-        <img class="col-4 p-2" src="../assets/Icon.png" />
-        <h4 class="col-8 my-auto"><b>Ocorp</b></h4>
-        <!-- <img class="col-8 p-2" src="../assets/Title.png" /> -->
-      </div>
+<div class="toolbar bg-primary" role="banner">
+  <div class="row m-0" style="height: 100%;">
+    <div class="col text-center my-auto">
+      <img src="../assets/Ocorp.svg" style="width: 128px;" class="my-auto">
     </div>
-    
   </div>
 </div>
 
 <div class="content" role="main">
   <div class="row m-0 fill-height">
-    <app-navbar (OnNavBarInit)="ChangeNavStyle($event)" style="{{navStyle}}"></app-navbar>
 
-    <div class="col pe-4 py-2">
+    <div id="navbar" class="col py-2 ps-3 pe-2 m-0" style="max-width: 250px;">
+      <app-navbar></app-navbar>
+    </div>
+    
+    <div class="col pe-2 py-2 m-0">
       <app-window>
         <router-outlet></router-outlet>
       </app-window>
     </div>
+
   </div>
 
   <div class="row mx-0 footer">
