--- a/app-marketplace/marketplace-frontend-fix/src/app/components/common/searchfield/searchfield.component.html
+++ b/app-marketplace/marketplace-frontend-fix/src/app/components/common/searchfield/searchfield.component.html
@@ -1,4 +1,4 @@
-<div class="row bg-white border border-primary mt-2 pt-2 pb-2 rounded shadow">
+<div class="row card mt-2 pt-2 pb-2">
     <div class="col-12">
         <div class="row" style="font-size: 1.3em;">
             <div class="col-6">
@@ -27,14 +27,14 @@
                 
                 <div class="col-2">
                     <h6 class="col-12">&nbsp;</h6>
-                    <button class="col-12 btn btn-danger" type="button" (click)="Clear()">
+                    <button class="col-12 btn btn-danger btn-sm" type="button" (click)="Clear()">
                         <i class="bi bi-x-lg"></i> Limpar
                     </button>
                 </div>
         
                 <div class="col-2">
                     <h6 class="col-12">&nbsp;</h6>
-                    <button class="col-12 btn btn-success text-white" (click)="Filter()">
+                    <button class="col-12 btn btn-success btn-sm text-white" (click)="Filter()">
                         <i class="bi bi-funnel-fill"></i> Filtrar
                     </button>
                 </div>
