--- a/app-marketplace/marketplace-frontend-fix/src/app/components/page-users/page-users.component.html
+++ b/app-marketplace/marketplace-frontend-fix/src/app/components/page-users/page-users.component.html
@@ -53,79 +53,70 @@
         <app-spinner-black></app-spinner-black>
     </div>
 
-    <!-- Mensagem de não encontrado -->
-    <div class="row text-center bg-white-d py-4 mt-3" *ngIf="users.length == 0 && !isLoading">
-        <h5>Nenhum resultado encontrado.</h5>
-    </div>
-
     <!-- Tabela -->
-    <div class="row mt-3" *ngIf="users.length > 0 && !isLoading">
-        <table class="table table-striped table-bordered m-0 bg-white tb-custom">
+    <div class="row card mt-2 p-2 ">
+        <div class="col-12">
+            <!-- Mensagem de não encontrado -->
+            <div class="row text-center py-4 mt-3" *ngIf="users.length == 0 && !isLoading">
+                <h5>Nenhum resultado encontrado.</h5>
+            </div>
 
-            <thead class="bg-white-dd text-primary">
-                <tr>
-                    <th class="text-center" style="width: 5%;">#</th>
-                    <th class="text-center" style="width: 15%;">Nome</th>
-                    <th class="text-center">Email</th>
-                    <th class="text-center" style="width: 15%;">Telefone</th>
-                    <th class="text-center" style="width: 15%;">Documento</th>
-                    <th class="text-center" style="width: 10%;">Perfil</th>
-                    <th class="text-center" style="width: 10%;">Status</th>
-                    <th class="text-center" style="width: 2%;">Ações</th>
-                </tr>
-            </thead>
+            <!-- Tabela -->
+            <div class="row" *ngIf="users.length > 0 && !isLoading">
+                <div class="col-12 p-2 my-1">
+                    <div class="row fs-7 fw-bold text-muted">
+                        <div class="border-end col text-center" style="max-width: 80px;">#</div>
+                        <div class="border-end col text-center text-truncate">Nome</div>
+                        <div class="border-end col text-center text-truncate">Email</div>
+                        <div class="border-end col text-center text-truncate">Telefone</div>
+                        <div class="border-end col text-center text-truncate">CPF</div>
+                        <div class="border-end col text-center" style="max-width: 120px;">Perfil</div>
+                        <div class="border-end col text-center" style="max-width: 80px;">Status</div>
+                        <div class="col text-center" style="max-width: 80px;">Ações</div>
+                    </div>
+                </div>
 
-            <tbody>
-                <tr *ngFor="let user of users">
+                <div *ngFor="let item of users" class="col-12 p-2 my-1 bg-primary-www rounded-3" >
+                    <div class="row fs-6">
+                        <div class="border-end col text-center" style="max-width: 80px;"><b>{{item.id}}</b></div>
+                        <div class="border-end col text-truncate">{{item.name}}</div>
+                        <div class="border-end col text-truncate">{{item.email}}</div>
+                        <div class="border-end col text-truncate">{{item.phoneNumber | mask : '(00) 00000-0000'}}</div>
+                        <div class="border-end col text-center text-truncate">{{item.documentNumber | mask :'000.000.000-00'}}</div>
 
-                    <td class="text-center">
-                        <b>{{user.id}}</b>
-                    </td>
+                        <div class="border-end col text-center" style="max-width: 120px;">
+                            <span [ngClass]="{'bg-danger':item.profileId == 1, 'bg-warning':item.profileId == 2, 'bg-secondary':item.profileId == 3, 'bg-success':item.profileId == 4}"  
+                            class="badge"><small>{{item.profile.name}}</small></span>
+                        </div>
 
-                    <td class="text-left tb-overflow-text">
-                        {{user.name}}
-                    </td>
+                        <div class="border-end col text-center" style="max-width: 80px;">
+                            <span class="badge bg-primary-w">
+                                <small>Ativo</small>
+                            </span>
+                        </div>
 
-                    <td class="text-left tb-overflow-text">
-                        {{user.email}}
-                    </td>
-
-                    <td class="text-center tb-overflow-text">
-                        {{user.phoneNumber | mask : '(00) 00000-0000'}}
-                    </td>
-
-                    <td class="text-center tb-overflow-text">
-                        {{user.documentNumber | mask : '000.000.000-00'}}
-                    </td>
-
-                    <td class="text-center tb-overflow-text">
-                        <span [ngClass]="{'bg-danger':user.profileId == 1, 'bg-warning':user.profileId == 2, 'bg-secondary':user.profileId == 3, 'bg-success':user.profileId == 4}"  
-                        class="badge"><small>{{user.profile.name}}</small></span>
-                    </td>
-
-                    <td class="text-center tb-overflow-text">
-                        <span class="badge bg-success"><small>Ativo</small></span>
-                    </td>
-
-                    <td class="text-center">
-                        <div ngbDropdown placement="bottom-right">
-                            <button class="btn-transparent" id="action" ngbDropdownToggle>
-                                <i class="bi bi-three-dots-vertical"></i>
-                            </button>
-
-                            <div ngbDropdownMenu="action">
-                                <button ngbDropdownItem type="button" (click)="Modal_Edit(user.id)">
-                                    <i class="bi bi-pencil-square me-2"></i>Editar
+                        <div class="col text-center" style="max-width: 80px;">
+                            <div ngbDropdown placement="bottom-right">
+                                <button class="btn-transparent" id="action" ngbDropdownToggle>
+                                    <i class="bi bi-three-dots-vertical"></i>
                                 </button>
+
+                                <div ngbDropdownMenu="action">
+                                    <button ngbDropdownItem type="button" (click)="Modal_Edit(item.id)">
+                                        <i class="bi bi-pencil-square me-2"></i>Editar
+                                    </button>
+                                </div>
                             </div>
                         </div>
-                    </td>
 
-                </tr>
-            </tbody>
-        </table>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Paginação -->
+            <app-pagination [totalItems]="totalItems" (OnPageChange)="ChangePage($event)"
+                (OnMaxItensChange)="ChangePageSize($event)"></app-pagination>
+        </div>
+
     </div>
-
-    <!-- Paginação -->
-    <app-pagination [totalItems]="totalItems" (OnPageChange)="ChangePage($event)" (OnMaxItensChange)="ChangePageSize($event)"></app-pagination>
 </div>
