--- a/app-marketplace/marketplace-frontend-fix/src/styles.scss
+++ b/app-marketplace/marketplace-frontend-fix/src/styles.scss
@@ -29,6 +29,10 @@ $danger: #AD343E;
     box-shadow: 0px 3px 8px 3px rgba(0, 0, 0, 0.4);
 }
 
+.shadow-2{
+    box-shadow: 0px 2px 4px 2px rgba(0, 0, 0, 0.1);
+}
+
 .pointer{
     cursor: pointer;
 }
@@ -51,6 +55,14 @@ $danger: #AD343E;
 
 .bg-white-ddd{
     background-color: #d8d8d8 !important;
+}
+
+.bg-primary-www{
+    background-color: #e7effc !important;
+}
+
+.bg-primary-ww{
+    background-color: #698eb9 !important;
 }
 
 .bg-primary-w{
@@ -96,4 +108,8 @@ $danger: #AD343E;
 
 .dropdown-toggle::after {
     content: none;
+}
+
+.fs-7{
+    font-size: 14px;
 }
