--- a/app-marketplace/marketplace-frontend-fix/src/app/components/page-users/page-users.component.html
+++ b/app-marketplace/marketplace-frontend-fix/src/app/components/page-users/page-users.component.html
@@ -6,9 +6,9 @@
             Usuários
         </div>
         <div class="col p-0 text-end">
-            <!-- <button type="button" class="btn btn-outline-primary" (click)="Modal_Register()">
+            <button type="button" class="btn btn-outline-primary" (click)="Modal_Register()">
                 Adicionar <i class="bi bi-plus-lg"></i>
-            </button> -->
+            </button>
         </div>
     </div>
 
