--- a/app-marketplace/marketplace-frontend-fix/src/app/components/page-users/modals/modal-user-register/modal-user-register-internal.component.html
+++ b/app-marketplace/marketplace-frontend-fix/src/app/components/page-users/modals/modal-user-register/modal-user-register-internal.component.html
@@ -12,13 +12,13 @@
                 <div class="col-6">
                     <label for="name" class="required">Nome</label>
                     <input id="name" [(ngModel)]="data.name" type="text" class="form-control"
-                        placeholder="Digite seu nome ..." (change)="ValidateField($event)">
+                        placeholder="Digite seu nome ..." (change)="ValidateField('name')">
                 </div>
 
                 <div class="col-6">
                     <label for="documentNumber" class="required">CPF</label>
                     <input id="documentNumber" [(ngModel)]="data.documentNumber" [mask]="'000.000.000-00'" type="text"
-                        class="form-control" placeholder="Digite seu cpf ..." (change)="ValidateField($event)">
+                        class="form-control" placeholder="Digite seu cpf ..." (change)="ValidateField('documentNumber')">
                 </div>
             </div>
 
@@ -26,13 +26,13 @@
                 <div class="col-6">
                     <label for="phoneNumber" class="required">Numero de Celular</label>
                     <input id="phoneNumber" [(ngModel)]="data.phoneNumber" [mask]="'(00) 00000-0000'" type="text"
-                        class="form-control" placeholder="Digite seu numero..." (change)="ValidateField($event)">
+                        class="form-control" placeholder="Digite seu numero..." (change)="ValidateField('phoneNumber')">
                 </div>
 
                 <div class="col-6">
                     <label for="email" class="required">E-Mail</label>
                     <input id="email" [(ngModel)]="data.email" type="text" class="form-control"
-                        placeholder="Digite seu e-mail ..." (change)="ValidateField($event)">
+                        placeholder="Digite seu e-mail ..." (change)="ValidateField('email')">
                 </div>
             </div>
 
@@ -40,26 +40,26 @@
                 <div class="col-6">
                     <label for="reg-password" class="required">Senha</label>
                     <input id="reg-password" [(ngModel)]="data.password" type="password" class="form-control"
-                        placeholder="Digite sua senha ..." (change)="ValidateField($event)">
+                        placeholder="Digite sua senha ..." (change)="ValidateField('reg-password')">
                 </div>
 
                 <div class="col-6">
                     <label for="confirmPassword" class="required">Confirmar Senha</label>
                     <input id="confirmPassword" [(ngModel)]="data.confirmPassword" type="password" class="form-control"
-                        placeholder="Digite sua senha ..." (change)="ValidateField($event)">
+                        placeholder="Digite sua senha ..." (change)="ValidateField('confirmPassword')">
                 </div>
             </div>
 
             <div class="row mt-2">
                 <div class="col-6">
                     <label for="profile" class="required">Perfil</label>
-                    <ng-select id="profile" placeholder="Selecione um Perfil"
-                        notFoundText="Nenhum perfil encontrado." 
-                        [(ngModel)]="data.profileId" (change)="ValidateProfile($event)">
-                        <ng-option *ngFor="let option of ddl_profile_options"
+                    <select class="form-select" id="profile"
+                        [(ngModel)]="data.profileId" (change)="ValidateField('profile')">
+                        <option value="" selected>Selecione um perfil ...</option>
+                        <option *ngFor="let option of ddl_profile_options"
                             value="{{option.id}}">{{option.name}}
-                        </ng-option>
-                    </ng-select>
+                        </option>
+                    </select>
                 </div>
             </div>
         </div>
@@ -74,13 +74,13 @@
                     <label for="zipCode" class="required">CEP</label>
                     <input id="zipCode" [(ngModel)]="data.zipCode" [mask]="'00000-000'"
                         (change)="GetAddress(data.zipCode)" type="text" class="form-control"
-                        placeholder="Digite seu cep..." (change)="ValidateField($event)">
+                        placeholder="Digite seu cep..." (change)="ValidateField('zipCode')">
                 </div>
 
                 <div class="col-6">
                     <label for="number" class="required">Numero</label>
                     <input id="number" [(ngModel)]="data.number" type="number" class="form-control"
-                        placeholder="Digite o numero do endereço..." (change)="ValidateField($event)">
+                        placeholder="Digite o numero do endereço..." (change)="ValidateField('number')">
                 </div>
             </div>
 
@@ -88,7 +88,7 @@
                 <div class="col">
                     <label for="addressName" class="required">Endereço</label>
                     <input id="addressName" [(ngModel)]="data.addressName" type="text" class="form-control"
-                        placeholder="Digite o endereço..." (change)="ValidateField($event)">
+                        placeholder="Digite o endereço..." (change)="ValidateField('addressName')">
                 </div>
             </div>
 
@@ -96,7 +96,7 @@
                 <div class="col">
                     <label for="city" class="required">Cidade</label>
                     <input id="city" [(ngModel)]="data.city" type="text" class="form-control"
-                        placeholder="Digite a cidade..." (change)="ValidateField($event)">
+                        placeholder="Digite a cidade..." (change)="ValidateField('city')">
                 </div>
             </div>
 
@@ -104,13 +104,13 @@
                 <div class="col-6">
                     <label for="state" class="required">Estado</label>
                     <input id="state" [(ngModel)]="data.state" type="text" class="form-control"
-                        placeholder="Digite o estado..." (change)="ValidateField($event)">
+                        placeholder="Digite o estado..." (change)="ValidateField('state')">
                 </div>
 
                 <div class="col-6">
                     <label for="neighborhood" class="required">Bairro</label>
                     <input id="neighborhood" [(ngModel)]="data.neighborhood" type="text" class="form-control"
-                        placeholder="Digite o bairro..." (change)="ValidateField($event)">
+                        placeholder="Digite o bairro..." (change)="ValidateField('neighborhood')">
                 </div>
             </div>
         </div>
