--- a/app-marketplace/marketplace-frontend-fix/src/app/components/page-establishments/modals/modal-establishment-register/modal-establishment-register.component.html
+++ b/app-marketplace/marketplace-frontend-fix/src/app/components/page-establishments/modals/modal-establishment-register/modal-establishment-register.component.html
@@ -13,14 +13,14 @@
                     <label for="corporateName" class="required">Razão Social</label>
                     <input id="corporateName" [(ngModel)]="data.corporateName"
                         type="text" class="form-control"
-                        placeholder="Digite a razão social..." (change)="ValidateField($event)">
+                        placeholder="Digite a razão social..." (change)="ValidateField('corporateName')">
                 </div>
     
                 <div class="col-6">
                     <label for="fantasyName" class="required">Nome Fantasia</label>
                     <input id="fantasyName" [(ngModel)]="data.fantasyName"
                         type="text" class="form-control"
-                        placeholder="Digite o nome fantasia..." (change)="ValidateField($event)">
+                        placeholder="Digite o nome fantasia..." (change)="ValidateField('fantasyName')">
                 </div>
             </div>
     
@@ -30,7 +30,7 @@
                     <input id="documentNumber" [(ngModel)]="data.documentNumber"
                         type="text" class="form-control"
                         placeholder="Digite a razão social..." 
-                        (change)="ValidateField($event)"
+                        (change)="ValidateField('documentNumber')"
                         [mask]="'00.000.000/0000-00'">
                 </div>
     
@@ -38,7 +38,7 @@
                     <label for="phoneNumber" class="required">Numero de Telefone</label>
                     <input id="phoneNumber" [(ngModel)]="data.phoneNumber" [mask]="'(00) 0000-0000'"
                         type="text" class="form-control"
-                        placeholder="Digite o nome fantasia..." (change)="ValidateField($event)">
+                        placeholder="Digite o nome fantasia..." (change)="ValidateField('phoneNumber')">
                 </div>
             </div>
     
@@ -47,14 +47,14 @@
                     <label for="url" class="">URL</label>
                     <input id="url" [(ngModel)]="data.url"
                         type="text" class="form-control"
-                        placeholder="Digite a razão social..." (change)="ValidateField($event)">
+                        placeholder="Digite a razão social..." (change)="ValidateField('url')">
                 </div>
     
                 <div class="col-6">
                     <label for="email" class="required">E-Mail</label>
                     <input id="email" [(ngModel)]="data.email"
                         type="text" class="form-control"
-                        placeholder="Digite o nome fantasia..." (change)="ValidateField($event)">
+                        placeholder="Digite o nome fantasia..." (change)="ValidateField('email')">
                 </div>
             </div>
         </div>
@@ -69,13 +69,13 @@
                     <label for="zipCode" class="required">CEP</label>
                     <input id="zipCode" [(ngModel)]="data.zipCode" [mask]="'00000-000'"
                         (change)="GetAddress(data.zipCode)" type="text" class="form-control"
-                        placeholder="Digite seu cep..." (change)="ValidateField($event)">
+                        placeholder="Digite seu cep..." (change)="ValidateField('zipCode')">
                 </div>
 
                 <div class="col-6">
                     <label for="number" class="required">Numero</label>
                     <input id="number" [(ngModel)]="data.number" type="number" class="form-control"
-                        placeholder="Digite o numero do endereço..." (change)="ValidateField($event)">
+                        placeholder="Digite o numero do endereço..." (change)="ValidateField('number')">
                 </div>
             </div>
 
@@ -83,7 +83,7 @@
                 <div class="col">
                     <label for="addressName" class="required">Endereço</label>
                     <input id="addressName" [(ngModel)]="data.addressName" type="text" class="form-control"
-                        placeholder="Digite o endereço..." (change)="ValidateField($event)">
+                        placeholder="Digite o endereço..." (change)="ValidateField('addressName')">
                 </div>
             </div>
 
@@ -91,7 +91,7 @@
                 <div class="col">
                     <label for="city" class="required">Cidade</label>
                     <input id="city" [(ngModel)]="data.city" type="text" class="form-control"
-                        placeholder="Digite a cidade..." (change)="ValidateField($event)">
+                        placeholder="Digite a cidade..." (change)="ValidateField('city')">
                 </div>
             </div>
 
@@ -99,13 +99,13 @@
                 <div class="col-6">
                     <label for="state" class="required">Estado</label>
                     <input id="state" [(ngModel)]="data.state" type="text" class="form-control"
-                        placeholder="Digite o estado..." (change)="ValidateField($event)">
+                        placeholder="Digite o estado..." (change)="ValidateField('state')">
                 </div>
 
                 <div class="col-6">
                     <label for="neighborhood" class="required">Bairro</label>
                     <input id="neighborhood" [(ngModel)]="data.neighborhood" type="text" class="form-control"
-                        placeholder="Digite o bairro..." (change)="ValidateField($event)">
+                        placeholder="Digite o bairro..." (change)="ValidateField('neighborhood')">
                 </div>
             </div>
         </div>
